src/wwwroot/css/app.css
@import url('https://fonts.googleapis.com/css?family=Inconsolata');
:root {
    --primary-color:lightseagreen;
    --secondary-color:antiquewhite;
}
html,
body {
    font-family: 'Inconsolata', Helvetica, Arial, sans-serif;
    font-size: larger;
    background-color: #282a36;
    color: var(--secondary-color);
}

a {
    color: var(--primary-color);
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

input:focus {
    outline: none;
}

.flex-row {
    padding-top: 1%;
    display: flex;
    flex-direction: row;
    text-align: center;
}

.flex-columnleft {
    display: flex;
    flex-direction: column;
    text-align: left;
    flex: 12%;
    max-width: 14%;
    height: auto;
    border-right-color: var(--primary-color);
    border-right-style: solid;
    border-right-width: 1px;
}

.flex-columnright {
    display: flex;
    flex-direction: column;
    text-align: left;
    flex: 60%;
    margin-left: 40px;
}

.flex-verticalitem {
    padding-bottom: 5px;
}

.flex-item {
    padding: 5px;
    flex: 30%;
}

li {
    padding: 3px;
}

@media (max-width: 700px) {
    .flex-row {
        flex-direction: column;
    }

    .flex-columnleft {
        max-width: 100%;
        border-right-width: 0;
        border-bottom-width: 1px;
        border-bottom-color: var(--primary-color);
        border-bottom-style: solid;
        padding-bottom: 4%;
        text-align: left;
        margin: auto;
    }

    .flex-columnright {
        text-align: left;
        padding-top: 3%;
        margin: auto;
    }
}

#blazor-error-ui {
    background: lightyellow;
    bottom: 0;
    box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
    display: none;
    left: 0;
    padding: 0.6rem 1.25rem 0.7rem 1.25rem;
    position: fixed;
    width: 100%;
    z-index: 1000;
}

